--- a/app/views/u_dashboard/index.html.erb
+++ b/app/views/u_dashboard/index.html.erb
@@ -13,7 +13,7 @@
     <div class="tab-pane active" id="General">
       <div class="row-fluid">
         <div class="span12">
-            <div id="map_canvas" style="width:100%;height:350px;"></div>
+          <div id="map_canvas" style="width:100%;height:350px;"></div>
         </div>
       </div>
     </div>
@@ -21,12 +21,7 @@
     <div class="tab-pane" id="Personal">
       <h2>Personal information</h2>
       <%= form_for(@user,:url => { :action => "update" }, :multipart => true ,:html => {:multipart => true,:class => "form-horizontal"}) do |f| %>
-<% if @user.errors.full_messages.any? %>
-<% @user.errors.full_messages.each do |error_message| %>
-<%= error_message if @user.errors.full_messages.first == error_message %> <br />
-<% end %>
-<% end %>
-<div class="row-fluid">
+        <div class="row-fluid">
           <div class="span12">
             <div class="span9">
               <div class="control-group">
@@ -56,7 +51,7 @@
                   <%= f.email_field :email, :placeholder=>"Email", :autofocus => true %>
                 </div>
               </div>
-              
+
               <div class="control-group">
                 <%= f.label :"Profile picture" ,:class=>"control-label" %><%= image_tag @user.avatar.url(:thumb),:class=>"img-rounded"  %>
                 <div class="controls">
@@ -91,94 +86,24 @@
     <div class="tab-pane" id="Cars">
       <h2>List of cars</h2>
       <ul class="thumbnails">
+        <% @cars.each do |car| %>
         <li class="span5 clearfix">
           <div class="thumbnail clearfix">
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="pull-left span2 clearfix" style='margin-right:10px'>
+            <%= image_tag car.car_image.url(:thumb),:class=>"pull-left span2 clearfix", :style=>'margin-right:10px' %>
             <div class="caption" class="pull-left">
-              <a href="http://bootsnipp.com/" class="btn btn-primary icon  pull-right">Select</a>
+              <a href="#" class="btn btn-primary icon  pull-right">Select</a>
               <h4>      
-                <a href="#" >Luis Felipe Kaufmann</a>
+                <a href="#" ><%= car.car_description %></a>
               </h4>
-              <small><b>RG: </b>99384877</small>
-
-
+              <small><b>License plate: </b><%= car.license_plate %></small>
             </div>
           </div>
         </li>
-        <li class="span5 clearfix">
-          <div class="thumbnail clearfix">
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="pull-left span2 clearfix" style='margin-right:10px'>
-            <div class="caption" class="pull-left">
-              <a href="http://bootsnipp.com/" class="btn btn-primary icon  pull-right">Select</a>
-              <h4>      
-                <a href="#" >Luis Felipe Kaufmann</a>
-              </h4>
-              <small><b>RG: </b>99384877</small>
-
-
-            </div>
-          </div>
-        </li>
-        <li class="span5 clearfix">
-          <div class="thumbnail clearfix">
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="pull-left span2 clearfix" style='margin-right:10px'>
-            <div class="caption" class="pull-left">
-              <a href="http://bootsnipp.com/" class="btn btn-primary icon  pull-right">Select</a>
-              <h4>      
-                <a href="#" >Luis Felipe Kaufmann</a>
-              </h4>
-              <small><b>RG: </b>99384877</small>
-
-
-            </div>
-          </div>
-        </li>
-        <li class="span5 clearfix">
-          <div class="thumbnail clearfix">
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="pull-left span2 clearfix" style='margin-right:10px'>
-            <div class="caption" class="pull-left">
-              <a href="http://bootsnipp.com/" class="btn btn-primary icon  pull-right">Select</a>
-              <h4>      
-                <a href="#" >Luis Felipe Kaufmann</a>
-              </h4>
-              <small><b>RG: </b>99384877</small>
-
-
-            </div>
-          </div>
-        </li>
-        <li class="span5 clearfix">
-          <div class="thumbnail clearfix">
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="pull-left span2 clearfix" style='margin-right:10px'>
-            <div class="caption" class="pull-left">
-              <a href="http://bootsnipp.com/" class="btn btn-primary icon  pull-right">Select</a>
-              <h4>      
-                <a href="#" >Luis Felipe Kaufmann</a>
-              </h4>
-              <small><b>RG: </b>99384877</small>
-
-
-            </div>
-          </div>
-        </li>
-        <li class="span5 clearfix">
-          <div class="thumbnail clearfix">
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="pull-left span2 clearfix" style='margin-right:10px'>
-            <div class="caption" class="pull-left">
-              <a href="http://bootsnipp.com/" class="btn btn-primary icon  pull-right">Select</a>
-              <h4>      
-                <a href="#" >Luis Felipe Kaufmann</a>
-              </h4>
-              <small><b>RG: </b>99384877</small>
-
-
-            </div>
-          </div>
-        </li>
+        <% end %>
       </ul>
     </div>
     <div class="tab-pane" id="Payment">
-      <form class="form-horizontal span6">
+      <form class="form-horizontal span8">
         <fieldset>
           <legend>Payment</legend>
 
@@ -314,27 +239,27 @@
 <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyC6mNDw1ovtoHdf2EhOysA7drYS5JT5QCw&sensor=false" %>
 
 <script>
-  var myCenter=new google.maps.LatLng(-33.878199,151.234898);
-function initialize()
-{
-        var mapProp = { 
-                center:myCenter,
-                zoom:12,
-                mapTypeId:google.maps.MapTypeId.ROADMAP 
-        };
-        // Array object
-        var map=new google.maps.Map(document.getElementById("map_canvas"),mapProp);
+  var myCenter = new google.maps.LatLng(-33.878199, 151.234898);
+  function initialize()
+  {
+    var mapProp = {
+      center: myCenter,
+      zoom: 12,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    // Array object
+    var map = new google.maps.Map(document.getElementById("map_canvas"), mapProp);
 
-        var marker=new google.maps.Marker({
-                        position:myCenter,
-                        });
+    var marker = new google.maps.Marker({
+      position: myCenter,
+    });
 
-        marker.setMap(map);
+    marker.setMap(map);
 
-        
 
-}
 
-google.maps.event.addDomListener(window, 'load', initialize);
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
 
 </script>
